--- a/EC_Assignment2/EC_Assignment2.csproj
+++ b/EC_Assignment2/EC_Assignment2.csproj
@@ -98,6 +98,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="admin\account.aspx" />
+    <Content Include="admin\accountMod.aspx" />
     <Content Include="admin\admin.aspx" />
     <Content Include="admin\category.aspx" />
     <Content Include="admin\categoryMod.aspx" />
@@ -146,6 +148,20 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="admin\account.aspx.cs">
+      <DependentUpon>account.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="admin\account.aspx.designer.cs">
+      <DependentUpon>account.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="admin\accountMod.aspx.cs">
+      <DependentUpon>accountMod.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="admin\accountMod.aspx.designer.cs">
+      <DependentUpon>accountMod.aspx</DependentUpon>
+    </Compile>
     <Compile Include="admin\admin.aspx.cs">
       <DependentUpon>admin.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
